--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
   <body>
     <div class="frame">
       <div class="displayContainer">
-        <div class="display" id="formulaDisplay">1231232</div>
-        <div class="display" id="mainDisplay">1231232</div>
+        <div class="display" id="formulaDisplay"></div>
+        <div class="display" id="mainDisplay">0</div>
       </div>
 
       <div class="buttonContainer">
-        <button class="operator" id="clear">A/C</button>
-        <button class="operator" id="percentage">%</button>
+        <button class="nonNumeric" id="clear">A/C</button>
+        <button class="nonNumeric" id="percentage">%</button>
+        
         <button class="operator" id="delete">DEL</button>
-
-        <!-- <button class="operator" id="openBracket">(</button>
-        <button class="operator" id="closeBracket">)</button> -->
         <button class="operator" id="divide">÷</button>
 
         <button class="digit" value="7">7</button>
@@ -38,10 +36,10 @@
         <button class="digit" value="3">3</button>
         <button class="operator" id="add">+</button>
 
-        <button class="operator" id="negative">+/–</button>
+        <button class="nonNumeric" id="negative">+/–</button>
         <button class="digit" value="0">0</button>
-        <button class="operator" id="decimal">.</button>
-        <button class="operator" id="equals">=</button>
+        <button class="nonNumeric" id="decimal">.</button>
+        <button class="nonNumeric" id="equals">=</button>
       </div>
     </div>
 
