add delete button

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="buttonContainer">
         <button class="nonNumeric" id="clear">A/C</button>
         <button class="nonNumeric" id="percentage">%</button>
-        
-        <button class="operator" id="delete">DEL</button>
+
+        <button class="nonNumeric" id="backspace">DEL</button>
         <button class="operator" id="divide">÷</button>
 
         <button class="digit" value="7">7</button>
