add removeLastDecimal function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="frame">
       <div class="displayContainer">
-        <div class="display" id="formulaDisplay"></div>
+        <div class="display" id="secondaryDisplay"></div>
         <div class="display" id="mainDisplay">0</div>
       </div>
 
@@ -38,8 +38,8 @@
 
         <button class="nonNumeric" id="negative">+/–</button>
         <button class="digit" value="0">0</button>
-        <button class="nonNumeric" id="decimal">.</button>
-        <button class="nonNumeric" id="equals">=</button>
+        <button class="digit" value="." id="decimal">.</button>
+        <button class="nonNumeric" id="calculate">=</button>
       </div>
     </div>
 
