add decimal and positive negative function

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <button class="digit" value="3">3</button>
         <button class="operator" id="add">+</button>
 
-        <button class="nonNumeric" id="negative">+/–</button>
+        <button class="nonNumeric" id="postiveNegative">+/-</button>
         <button class="digit" value="0">0</button>
-        <button class="digit" value="." id="decimal">.</button>
+        <button class="nonNumeric" value="." id="decimal">.</button>
         <button class="nonNumeric" id="calculate">=</button>
       </div>
     </div>
